# cortex-works-minimal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  activity.txt  logs.txt
.cargo/: config.toml
.github/: FUNDING.yml  copilot-instructions.md
crates/cortex-act/: Cargo.toml  README.md  task.md  test_lang.rs
crates/cortex-act/src/: lib.rs  matchers.json
crates/cortex-act/src/act/: atomic_sync.rs  auto_healer.rs  batch_executor.rs  data_editor.rs  dispatch.rs  editor.rs  env_patcher.rs  fs_manage.rs  hot_reload.rs  markup_editor.rs  mod.rs  pathing.rs  search_exact.rs  semantic_search.rs  shell_exec.rs  sql_editor.rs
crates/cortex-ast/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  USE_CASES.md  release.sh
crates/cortex-ast/docs/: BUILDING.md  MCP_SETUP.md  languages.md  tauri_bridge.md
crates/cortex-ast/queries/: c_prune.scm  cpp_prune.scm  csharp_prune.scm  dart_prune.scm  go_prune.scm  java_prune.scm  php_prune.scm  py_prune.scm  ruby_prune.scm  rust_prune.scm  ts_prune.scm
crates/cortex-ast/scripts/: bench_run.zsh  bench_work.zsh  self_test.py
crates/cortex-ast/src/: chronos.rs  config.rs  grammar_manager.rs  inspector.rs  lib.rs  main.rs  mapper.rs  scanner.rs  server.rs  skeleton.rs  slicer.rs  tool_schemas.rs  universal.rs  vector_store.rs  workspace.rs  xml_builder.rs  z4_tools.rs
crates/cortex-ast/tests/: mcp_stdio_smoke.rs
crates/cortex-db/: Cargo.toml  README.md  release.sh
crates/cortex-db/src/: checkpoint_store.rs  code_store.rs  embed.rs  lib.rs  memory_store.rs  project_store.rs  rules_store.rs
crates/cortex-db/tests/: vector_search_e2e.rs
crates/cortex-mcp/: Cargo.toml
crates/cortex-mcp/src/: lib.rs  main.rs
crates/cortex-mcp/src/tools/: act.rs  mod.rs  registry.rs
crates/cortex-mcp/tests/: full_stack_smoke.rs
docs/: ARCH.md  DEVELOPING.md  EXTENSION_ARCH.md  USAGE.md
extensions/cortex-works-vscode/: LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json
extensions/cortex-works-vscode/resources/sidecars/: README.md
extensions/cortex-works-vscode/scripts/: stage-sidecars.mjs
extensions/cortex-works-vscode/src/: extension.ts
scripts/: linux_smoke.sh  release.sh
