[package]
name        = "cortexast"
description = "The AI-Native Code Intelligence Backend for LLM agents. Pure Rust MCP server with semantic code navigation and AST time machine."
keywords    = ["llm", "mcp", "context", "optimization", "rust", "vector-search"]
categories  = ["command-line-utilities", "development-tools"]

version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
clap.workspace          = true
serde.workspace         = true
serde_json.workspace    = true
ignore.workspace        = true
glob.workspace          = true
tokio.workspace         = true
anyhow.workspace        = true
quick-xml.workspace     = true
toml.workspace          = true
regex.workspace         = true
rayon.workspace         = true
indicatif.workspace     = true
model2vec-rs.workspace  = true
xxhash-rust.workspace   = true
dirs.workspace          = true
serde_yaml.workspace    = true
tracing.workspace       = true
ureq.workspace          = true

# Tree-sitter — deep AST inspection
tree-sitter.workspace            = true
tree-sitter-rust.workspace       = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace     = true

# SQLite-backed memory store (replaces JSONL reader)
cortex-db = { path = "../cortex-db" }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
